# Tina

./: .gitignore  Cargo.toml  README.md  icons.toml
.serena/: project.yml
crates/tina/: Cargo.toml  build.rs
crates/tina-cli/: Cargo.toml
crates/tina-cli/src/: commands.rs  events.rs  io.rs  main.rs
crates/tina-core/: Cargo.toml
crates/tina-core/src/: events.rs  identity.rs  lib.rs  protocol.rs
crates/tina-db/: Cargo.toml
crates/tina-db/src/: error.rs  lib.rs  models.rs  repository.rs  schema.rs  tests.rs
crates/tina-db/src/repository/: accounts.rs  aliases.rs  chats.rs  contacts.rs  db.rs  groups.rs  media.rs  mentions.rs  merge.rs  messages.rs  messages_batch.rs  mod.rs  settings.rs  util.rs
crates/tina-gtk/: Cargo.toml  build.rs
crates/tina-gtk/i18n/: en-US.ftl  pt-BR.ftl
crates/tina-gtk/src/: app.rs  banner.rs  format.rs  i18n.rs  inventory.rs  main.rs  qr.rs  service.rs  time.rs  wa_id.rs  widget_utils.rs
crates/tina-gtk/src/app/: component.rs  dispatch.rs  messages.rs  mod.rs  model.rs  pages.rs
crates/tina-gtk/src/components/: chat_area.rs  chat_row.rs  chat_tab.rs  login.rs  main_page.rs  mention_popover.rs  message_bubble.rs  mod.rs  profile_menu.rs  settings.rs  sidebar.rs  stories.rs
crates/tina-gtk/src/components/chat_area/: component.rs  messages.rs  mod.rs  model.rs  pane.rs
crates/tina-gtk/src/components/chat_area/actions/: dispatch.rs  mod.rs  routing.rs  tabs.rs
crates/tina-gtk/src/components/chat_row/: context_menu.rs  css.rs  item.rs  mod.rs  widgets.rs
crates/tina-gtk/src/components/chat_tab/: build.rs  clipboard_paste.rs  component.rs  messages.rs  mod.rs  model.rs  preview.rs  record.rs  scroll.rs
crates/tina-gtk/src/components/chat_tab/actions/: attach.rs  dispatch.rs  echo.rs  history.rs  identity.rs  media.rs  mentions.rs  mod.rs  scroll.rs  stickers.rs
crates/tina-gtk/src/components/main_page/: component.rs  dispatch.rs  messages.rs  mod.rs  model.rs
crates/tina-gtk/src/components/message_bubble/: css.rs  factory.rs  format.rs  image.rs  item.rs  lightbox.rs  mod.rs
crates/tina-gtk/src/components/message_media/: animated.rs  imp.rs  mod.rs
crates/tina-gtk/src/components/message_row/: bind.rs  item.rs  mod.rs  setup.rs  widgets.rs
crates/tina-gtk/src/components/sidebar/: actions.rs  component.rs  messages.rs  mod.rs  model.rs  status_row.rs
crates/tina-gtk/src/service/: cmd.rs  events.rs  handlers.rs  mod.rs  runtime.rs  state.rs
crates/tina-gtk/tests/: phone_test.rs  pixbuf_test.rs
crates/tina-ipc/: Cargo.toml
crates/tina-ipc/src/: error.rs  lib.rs  nanachi.rs  process.rs
crates/tina-slint/: Cargo.toml
crates/tina-slint/src/: commands.rs  event_loop.rs  main.rs  state.rs  ui_bridge.rs
crates/tina-slint/ui/: app.slint
crates/tina-worker/: Cargo.toml
crates/tina-worker/src/: error.rs  events.rs  lib.rs  worker.rs
crates/tina-worker/src/worker/: batch.rs  buffer.rs  core.rs  dispatcher.rs  download.rs  flush.rs  mod.rs  realtime.rs
crates/tina/src/: app.rs  banner.rs  command_scheduler.rs  jid_utils.rs  main.rs  theme.rs  worker_bridge.rs
crates/tina/src/scenes/: in_app.rs  login.rs  mod.rs
crates/tina/src/state/: messages.rs  mod.rs  qr.rs  service_worker.rs  ui.rs
crates/tina/ui/: app.slint  globals.slint
crates/tina/ui/components/: icon.slint  sidebar-panel.slint  sidebar.slint
crates/tina/ui/panels/: channels.slint  chat-view.slint  chats.slint  communities.slint  repairing.slint  settings.slint  status.slint
crates/tina/ui/scenes/: scenes.slint
nanachi/: .gitignore  README.md  avatar.go  client.go  client_lifecycle.go  client_reconcile.go  connection.go  content.go  context_info.go  download.go  download_cache.go  download_path.go  event_handlers.go  event_mappers.go  events.go  go.mod  go.sum  history_sync.go  index.ts  ipc.go  ipc_emit.go  ipc_types.go  jid.go  main.go  manager.go  manager_mapping.go  media_meta.go  media_probe.go  messages.go  package.json  proto_strip.go  tsconfig.json  upload.go
nanachi/src/: auth.ts  ipc.ts  types.ts  whatsapp.ts
