[workspace]
resolver = "3"
members = [
  "crates/tina-gtk",
  "crates/tina-cli",
  "crates/tina-core",
  "crates/tina-db",
  "crates/tina-ipc",
  "crates/tina-worker",
]

[workspace.dependencies]
fluent-bundle = "0.15"
sys-locale = "0.3"
unic-langid = "0.9"
rust-embed = "8"
tokio = { version = "1.48", features = ["full"] }
slint = "1"
slint-build = "1"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
owo-colors = "4"
lucide-slint = "0.1.4"
chrono = "0.4"
base64 = "0.22"
