[package]
name = "tina-gtk"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tina-gtk"
path = "src/main.rs"

[dependencies]
relm4 = { version = "0.9", features = ["libadwaita", "gnome_46"] }
relm4-components = "0.9"
# Standard Adwaita icon-theme names cover everything we use in v1; drop the
# relm4-icons dep to avoid pinning specific icon features.
gtk = { version = "0.9", package = "gtk4", features = ["v4_14"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_6"] }
gdk = { version = "0.9", package = "gdk4" }
glib = "0.20"
gio = "0.20"

tokio = { workspace = true }
color-eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
chrono.workspace = true
qrcode = "0.14"
uuid = { version = "1", features = ["v7"] }
owo-colors.workspace = true

tina-core = { path = "../tina-core" }
tina-worker = { path = "../tina-worker" }
tina-db = { path = "../tina-db" }
