[package]
name = "tina-gtk"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tina-gtk"
path = "src/main.rs"

[dependencies]
relm4 = { version = "0.11", features = ["libadwaita", "gnome_50"] }
relm4-components = "0.11"
relm4-icons = { version = "0.11", features = ["icon-development-kit"] }
gtk = { version = "0.11", package = "gtk4", features = ["v4_18"] }
adw = { version = "0.9", package = "libadwaita", features = ["v1_9"] }
gdk = { version = "0.11", package = "gdk4" }
glib = "0.22"
gio = "0.22"

tokio = { workspace = true }
color-eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
chrono.workspace = true
qrcode = "0.14"
uuid = { version = "1", features = ["v7"] }
owo-colors.workspace = true

tina-core = { path = "../tina-core" }
tina-worker = { path = "../tina-worker" }
tina-db = { path = "../tina-db" }
phonenumber = "0.3.9"

[build-dependencies]
relm4-icons-build = "0.11"
