[package]
name = "tina-slint"
version = "0.1.0"
edition = "2024"
default-run = "tina-slint"

[[bin]]
name = "tina-slint"
path = "src/main.rs"

[dependencies]
tina-worker = { version = "0.1.0", path = "../tina-worker" }
tokio = { workspace = true }
slint = "1.9"
color-eyre = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
owo-colors = { workspace = true }

[build-dependencies]
slint-build = "1.9"
