[package]
name = "tina"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre.workspace = true
directories.workspace = true
iced.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
owo-colors.workspace = true
